--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /chave-primaria-composta/chave-composta-idClass/nbproject/private/
 /chave-primaria-composta/chave-composta-idClass/build/
+/heranca/nbproject/private/
+/heranca/build/
