--- a/banco/nbproject/project.properties
+++ b/banco/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/heranca.jar
+dist.jar=${dist.dir}/banco.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/heranca
+dist.jlink.output=${dist.jlink.dir}/banco
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=/home/aluno/NetBeansProjects/introducao/lib/mysql-connector-java-8.0.20.jar
 includes=**
@@ -46,8 +46,7 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -74,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=heranca
-main.class=Principal
+jlink.launcher.name=banco
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
