--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /heranca/nbproject/private/
 /heranca/build/
 /banco/nbproject/private/
+/named-query/nbproject/private/
+/named-query/build/
+/util/nbproject/private/
+/util/dist/
+/util/build/
